--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -16,6 +16,7 @@
   transition: all 0.5s ease 0s;
   height: 80px;
   background: linear-gradient(90deg, rgba(28, 27, 27,0.9) 0%, rgba(26, 23, 23,0.9) 100%);
+  box-shadow: 0 0 30px 1 gray;
 }
 
 
