--- a/src/components/UI/Dropdown/Dropdown.scss
+++ b/src/components/UI/Dropdown/Dropdown.scss
@@ -11,6 +11,7 @@
 	clip-path: polygon(82% 100%, 100% 82%, 100% 0%, 18% 0, 0 18%, 0 100%);
 	border: 0.5px solid aqua;
   	box-shadow: 0 0 10px aqua;
+	
   }
   
   .dropdown-menu li {
@@ -23,6 +24,7 @@
   
   
   .dropdown-menu.clicked {
+	
 	display: none;
   }
   
@@ -33,13 +35,14 @@
 	width: 100%;
 	color: #fff;
 	padding: 5px 0;
-	clip-path: polygon(82% 100%, 100% 82%, 100% 0%, 18% 0, 0 18%, 0 100%);
+	clip-path: polygon(82% 100%, 99% 81%, 100% 0%, 19% 0, 0 21%, 0 100%);
+  	border: 0.5px solid rgba(26, 23, 23,0);
 	
 	&:hover{
 		color: aqua;
-		border: 0.5px solid aqua;
+		border: 1px solid aqua;
 		box-shadow: 0 0 10px aqua;
-  		transition: all 0.2s ease-out;
+  		transition: all 0.4s ease-in-out;
 	}
   }
   
