--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,4 +1,4 @@
-
+@normalize{};
 @import url(./null.css);
 @import url('./fonts.css');
 
@@ -28,3 +28,4 @@
 	margin-top: -140px;
 	padding: 160px 0 0 0;
 }
+
