--- a/src/components/UI/Dropdown/Dropdown.scss
+++ b/src/components/UI/Dropdown/Dropdown.scss
@@ -35,6 +35,7 @@
 	width: 100%;
 	color: #fff;
 	padding: 5px 0;
+	text-decoration: none;
 	clip-path: polygon(82% 100%, 99% 81%, 100% 0%, 19% 0, 0 21%, 0 100%);
   	border: 0.5px solid rgba(26, 23, 23,0);
 	
