--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -1,3 +1,5 @@
+
+
 .container{
  max-width: 1450px;
  display: flex;
@@ -9,12 +11,11 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	height: 2000px;
+	flex: 1 0 auto;
 }
 
 .s_about{
 	padding: 0 30px;
-	
 	flex-direction: row;
 	align-items:center;
 	justify-content: space-around;
@@ -29,19 +30,16 @@
 	width: 50%;
 	& p{
 		font-size: calc(10px + 12*(100vw/1450));
-	
 		display: block;
 	}
 }
 .title{
-	font-size: calc(32px + 22*(100vw/1450));
+	font-size: calc(30px + 20*(100vw/1450));
 	
 	margin-bottom: 5vh;
 }
 
-.items{
 
-}
 .item {
 	margin-bottom: 40px;
 	display: flex;
@@ -59,7 +57,7 @@
 }
 .item_check{
 	margin: 0 18px 0 18px;
-	background: url(../components/img/check.png) 0 0/cover no-repeat;
+	background: url(../components/img/check.webp) 0 0/cover no-repeat;
 	height: 80px;
 	width: 64px;
 
@@ -89,6 +87,7 @@
 		.container{
 			flex-direction: column;
 		}
+
 }
 @media screen and (max-width: 420px){
 	.item_check,
@@ -101,4 +100,115 @@
 		margin: 0 12px 0 12px;
 		width: 78px;
 	}
+
 }
+
+
+
+
+
+
+
+
+
+
+.s_opp{
+	padding: 30px;
+	margin-top: 150px;
+
+}
+
+.s_opp_title{
+	text-align: center;
+	color: #fff;
+	font-size: calc(30px + 20*(100vw/1450));
+	margin-bottom: 50px;
+}
+
+.s_opp_item{
+	
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-around;
+	margin-bottom: 30px;
+}
+@media (max-width: 720px){
+	.s_opp_item{
+		padding: 0px;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items:center;
+		margin-bottom: 5px;
+	}
+	.opp_item_text{
+		padding: 0;
+		margin:0;
+		text-align: left;
+		line-height: 1.5;
+		font-size:calc(8px + 8*(100vw/1450));
+		color: #fff;
+		
+	
+	}
+	
+.opp_item_img{
+	margin-bottom: 0px;
+	width: 60px;
+	height: 60px;
+
+}
+
+}
+
+.opp_item_img{
+	width: 100px;
+	height: 100px;
+
+}
+.opp_item_text{
+	margin: 0 40px;
+	max-width: 200px;
+	text-align: center;
+	line-height: 1.5;
+	font-size:calc(8px + 8*(100vw/1450));
+	color: #fff;
+
+}
+.pc{
+	width: 80px;
+	height: 80px;
+	background: url("../components/img/gaming-pc.webp") 0 0/contain no-repeat;
+}
+.chairs{
+	
+	background: url("../components/img/gaming-chair.webp") 0 0/contain no-repeat;
+}
+.internet{
+	width: 80px;
+	height: 80px;
+	background: url("../components/img/internet.webp") 0 0/contain no-repeat;
+}
+
+.devices{
+	width: 80px;
+	height: 80px;
+	background: url("../components/img/computer-mouse.webp") 0 0/contain no-repeat;
+}
+
+.cond{
+	background: url("../components/img/air-conditioner.webp") 0 0/contain no-repeat;
+}
+
+
+.cashback{
+	width: 80px;
+	height: 80px;
+	background: url("../components/img/cashback.webp") 0 0/contain no-repeat;
+}
+
+
+.tour{
+	background: url("../components/img/tournament.webp") 0 0/contain no-repeat;
+}
+
